# Side-Process-Manager

./: .gitignore  CMakeLists.txt  README.md
diagrams/: Diagram bez tytułu.drawio  reader_class_diagram.drawio  reader_diagram.drawio  reader_sequence_diagram.drawio  readme.md
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  ProcessState.cpp  ProcessState.hpp  Tools.cpp  Tools.hpp
src/provider/: CMakeLists.txt  DirPathPreparator.cpp  DirPathPreparator.hpp  ProcessData.cpp  ProcessData.hpp  ProcessDataProvider.cpp  ProcessDataProvider.hpp  ProcessDataReader.cpp  ProcessDataReader.hpp  ProcessState.hpp  Reader.cpp  Reader.hpp
src/provider/reader/: IReader.hpp  Reader.cpp  Reader.hpp
src/ui/: CMakeLists.txt
src/ui/console/: CMakeLists.txt  ConsoleDisplay.cpp  ConsoleDisplay.hpp  Display.cpp  Display.hpp  Layout.cpp  Layout.hpp  Tools.cpp  Tools.hpp  Window.cpp  Window.hpp
